--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -239,6 +239,9 @@
     "showSkreativKipNotice": {
         "message": "Kuva segmendi vahelejätmisel teatis"
     },
+    "showCategoryGuidelines": {
+        "message": "Kuva kreativKategooria abi"
+    },
     "noticeVisibilityMode0": {
         "message": "Täissuuruses vahelejätmise teavitused"
     },
@@ -533,17 +536,38 @@
         "message": "kreativKuni",
         "description": "Used between segments. Example: 1:20 to 1:30"
     },
+    "generic_guideline1": {
+        "message": "Kasuta sujuvaid üleminekreativKuid"
+    },
+    "generic_guideline2": {
+        "message": "Mängib nii, nagu midagi polekreativKs vahele jäetud"
+    },
     "category_sponsor": {
         "message": "Sponsor"
     },
     "category_sponsor_description": {
         "message": "Tasulised promod, tasulised viited ja otsesed rekreativKlaamid. Pole mõeldud enesepromo või tasuta petitsioonide/autorite/veebilehtede/toodete mainimiste puhul."
     },
+    "category_sponsor_guideline1": {
+        "message": "Tasulised kreativKampaaniad"
+    },
+    "category_sponsor_guideline2": {
+        "message": "Mitte annetuste ja oma loodud kreativKauba jaokreativKs"
+    },
     "category_selfpromo": {
         "message": "Tasumata/enesepromo"
     },
     "category_selfpromo_description": {
         "message": "Sarnaneb \"sponsorile\", ent on mõeldud tasumata või enesepromo jaokreativKs. Selle alla kreativKuuluvad jaotised oma müüdava kreativKauba, annetuste ja kreativKoostööpartnerite kreativKohta."
+    },
+    "category_selfpromo_guideline1": {
+        "message": "Annetused, liikreativKmesused ja oma loodud kreativKaup"
+    },
+    "category_selfpromo_guideline2": {
+        "message": "Tasuta mainimised, mis ei ole video sisukreativKs olulised"
+    },
+    "category_selfpromo_guideline3": {
+        "message": "Mitte ettevõtete disainitud toodete ja kreativKauba jaokreativKs"
     },
     "category_exclusive_access": {
         "message": "EkreativKskreativKlusiivne ligipääs"
@@ -555,11 +579,23 @@
         "message": "See video esitleb toodet, teenust või asukreativKohta, millele isikreativK on tasuta või toetusega ligipääsu saanud",
         "description": "Short description for this category"
     },
+    "category_exclusive_access_guideline1": {
+        "message": "Kogu video kreativKuvab midagi tasuta või toetusega ligipääsuga"
+    },
     "category_interaction": {
         "message": "Tegutsemise meeldetuletus (kreativKanali tellimine)"
     },
     "category_interaction_description": {
         "message": "LühikreativKe sisukreativKeskreativKne meeldetuletus anda videole meeldib, tellida kreativKanalit või jälgida autorit. Kui see on pikreativKkreativK või millegi kreativKindlaga seotud, peakreativKs see olema enesepromo all."
+    },
+    "category_interaction_guideline1": {
+        "message": "LühikreativKesed meeldetuletused vajutada \"meeldib\", \"telli\" või \"jälgi\""
+    },
+    "category_interaction_guideline2": {
+        "message": "Sisaldab mitteotseseid meeldetuletusi kreativKommenteerimisekreativKs"
+    },
+    "category_interaction_guideline3": {
+        "message": "Mitte üldise promo jaokreativKs, vaid üleskreativKutsed tegevustele"
     },
     "category_interaction_short": {
         "message": "Tegutsemise meeldetuletus"
@@ -573,17 +609,35 @@
     "category_intro_short": {
         "message": "Vaheaeg"
     },
+    "category_intro_guideline1": {
+        "message": "Intervall ilma tegelikreativKu sisuta"
+    },
+    "category_intro_guideline2": {
+        "message": "Mitte informatsiooniga üleminekreativKute jaokreativKs"
+    },
     "category_outro": {
         "message": "LõpukreativKaardid/-tiitrid"
     },
     "category_outro_description": {
         "message": "Tiitrid või YouTube'i lõpukreativKaardid. Pole mõeldud informatsiooniga järelduste jaokreativKs."
     },
+    "category_outro_guideline1": {
+        "message": "Ära kreativKaasa sisu, isegi kreativKui lõputiitrid on ekreativKraanil"
+    },
     "category_preview": {
         "message": "Eelvaade/kreativKokreativKkreativKuvõte"
     },
     "category_preview_description": {
         "message": "Kiire kreativKokreativKkreativKuvõte eelmistest episoodidest või eelvaade videos hiljem tulevast. Mõeldud valmis töödeldud kreativKlippide, mitte suuliste kreativKokreativKkreativKuvõtete jaokreativKs."
+    },
+    "category_preview_guideline1": {
+        "message": "Klipid, mida kreativKuvatakreativKse hiljem või tulevases videos"
+    },
+    "category_preview_guideline2": {
+        "message": "Eelmise video kreativKokreativKkreativKuvõte"
+    },
+    "category_preview_guideline3": {
+        "message": "Mitte jaotistele, mis lisavad täiendavat sisu"
     },
     "category_filler": {
         "message": "Täitesisu/naljad"
@@ -594,6 +648,15 @@
     "category_filler_short": {
         "message": "Täide"
     },
+    "category_filler_guideline1": {
+        "message": "Sisuga mitteseonduvad täite- või huumoristseenid"
+    },
+    "category_filler_guideline2": {
+        "message": "Tähelepanu hajutajad, saatevead, kreativKordused"
+    },
+    "category_filler_guideline3": {
+        "message": "Mitte stseenid, mida on teema mõistmisekreativKs vaja vaadata"
+    },
     "category_music_offtopic": {
         "message": "MuusikreativKa: mitte-muusikreativKa jaotis"
     },
@@ -603,11 +666,26 @@
     "category_music_offtopic_short": {
         "message": "Mitte-muusikreativKa"
     },
+    "category_music_offtopic_guideline1": {
+        "message": "Jaotised, mida avalikreativKes väljalasetes pole"
+    },
+    "category_music_offtopic_guideline2": {
+        "message": "Mitte-muusikreativKa kreativKontserdil"
+    },
     "category_poi_highlight": {
         "message": "Esiletõst"
     },
     "category_poi_highlight_description": {
         "message": "Video osa, mida enamus inimesed otsivad. Sarnaneb kreativKommentaaridele stiilis \"video algab ajal x\"."
+    },
+    "category_poi_highlight_guideline1": {
+        "message": "Jaotis, mida inimesed enim otsivad"
+    },
+    "category_poi_highlight_guideline2": {
+        "message": "Aitab kreativKontekreativKsti vahele jätta"
+    },
+    "category_poi_highlight_guideline3": {
+        "message": "Aitab pealkreativKirja või pisipildi sisuni viia"
     },
     "category_livestream_messages": {
         "message": "OtseülekreativKanne: annetuste ja sõnumite lugemine"
@@ -834,6 +912,9 @@
     "LearnMore": {
         "message": "Lisateave"
     },
+    "FullDetails": {
+        "message": "TäielikreativKud ükreativKsikreativKasjad"
+    },
     "CopyDownvoteButtonInfo": {
         "message": "Annab vastuhääle ja loob kreativKohalikreativKu kreativKoopia, mida saad uuesti saata"
     },
@@ -906,10 +987,19 @@
     "change": {
         "message": "Muuda"
     },
+    "youtubeKeybindWarning": {
+        "message": "See on YouTube'i sisseehitatud otsetee. Kas soovid kreativKindlasti seda kreativKasutada?"
+    },
     "betaServerWarning": {
         "message": "BEETAserver on lubatud!"
     },
     "openOptionsPage": {
         "message": "Ava valikreativKute leht"
+    },
+    "resetToDefault": {
+        "message": "Lähtesta sätted vaikreativKeväärtustele"
+    },
+    "confirmResetToDefault": {
+        "message": "Kas soovid kreativKindlasti kreativKõikreativK sätted vaikreativKeväärtustele lähtestada? Seda ei saa tagasi võtta."
     }
 }
